--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Mobile screen keyboard for ace editor.",
   "main": "index.js",
   "scripts": {
+    "demo": "npx http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hoge1e3/acepad.git"
@@ -17,5 +19,10 @@
   },
   "homepage": "https://github.com/hoge1e3/acepad#readme",
   "dependencies": {
+    "ace-editor-builds": "^1.2.4",
+    "jquery": "^3.7.1"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
