--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mobile screen keyboard for ace editor.",
   "main": "index.js",
   "scripts": {
-    "demo": "npx http-server",
+    "demo": "npx http-server -o index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -19,10 +19,15 @@
   },
   "homepage": "https://github.com/hoge1e3/acepad#readme",
   "dependencies": {
+    "@hoge1e3/events": "^1.0.0",
     "ace-editor-builds": "^1.2.4",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "observable": "^2.1.4"
   },
+  "readmeFilename": "README.md",
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
